<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calculadora.MainActivity" >

    <Button
        android:id="@+id/btn4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn1"
        android:layout_below="@+id/btn1"
        android:layout_marginTop="19dp"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/btn5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn2"
        android:layout_alignTop="@+id/btn4"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/btn8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn5"
        android:layout_alignTop="@+id/btn7"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/btn7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn4"
        android:layout_below="@+id/btn4"
        android:layout_marginTop="21dp"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/btn1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="87dp"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn7"
        android:layout_alignLeft="@+id/btn3"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/btnResta"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn6"
        android:layout_alignBottom="@+id/btn6"
        android:layout_alignRight="@+id/btnSuma"
        android:text="@string/btnResta" />

    <Button
        android:id="@+id/btnMulti"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnResta"
        android:layout_alignTop="@+id/btn9"
        android:text="@string/btnMulti" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMulti"
        android:layout_alignRight="@+id/btnMulti"
        android:layout_below="@+id/btnMulti"
        android:layout_marginTop="23dp"
        android:text="@string/btnDiv" />

    <Button
        android:id="@+id/btnPunto"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnDiv"
        android:layout_alignLeft="@+id/btn7"
        android:text="@string/btnPunto" />

    <Button
        android:id="@+id/btnSuma"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn4"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:text="@string/btnSuma" />

    <Button
        android:id="@+id/btn2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn3"
        android:layout_alignBottom="@+id/btn3"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/btn9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_alignLeft="@+id/btn6"
        android:text="@string/btn9" />

    <Button
        android:id="@+id/btn0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnIgual"
        android:layout_alignBottom="@+id/btnIgual"
        android:layout_alignLeft="@+id/btn8"
        android:text="@string/btn0" />

    <Button
        android:id="@+id/btnIgual"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnDiv"
        android:layout_alignBottom="@+id/btnDiv"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/btnDiv"
        android:text="@string/btnIgual" />

    <Button
        android:id="@+id/btn3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSuma"
        android:layout_alignBottom="@+id/btnSuma"
        android:layout_alignLeft="@+id/btnIgual"
        android:text="@string/btn3" />

    <EditText
        android:id="@+id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnBorrar"
        android:layout_alignBottom="@+id/btnBorrar"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/btnBorrar"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSuma"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="14dp"
        android:text="@string/btnBorrar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numero"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/hello_world" />

</RelativeLayout>